--- a/kerbal-landing/kerbal-landing.vcxproj
+++ b/kerbal-landing/kerbal-landing.vcxproj
@@ -143,9 +143,12 @@
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="assets\background.png" />
     <Image Include="assets\default_font.png" />
     <Image Include="assets\default_platform.png" />
     <Image Include="assets\default_player.png" />
+    <Image Include="assets\kerbal.png" />
+    <Image Include="assets\kerbal_head.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
